<resources>
        <string name="app_name">PracticaRecursos</string>
        <string name="tvVersionAndroidLB">1. Version Android:</string>
        <string name="tvVersionAndroid"></string>
        <string name="tvLight">2. Flashlight:</string>
        <string name="btnOn">On</string>
        <string name="btnOff">Off</string>
        <string name="tvLevelBattery">3. Level of Battery</string>
        <string name="tvLevelBattery_2"></string>
        <string name="tvStorage">4. Storage</string>
        <string name="etNameFile">Name of File</string>
        <string name="btnSaveFile">Save</string>
        <string name="tvState">5. Connection:</string>
        <string name="btnOpenCamera">6. Open Camera</string>
        <string name="btnOpenBluetooth">7. Open Bluetooth</string>
</resources>
