<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <TextView
            android:id="@+id/tvVersionAndroidLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvVersionAndroidLB" />

        <TextView
            android:id="@+id/tvVersionAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvVersionAndroid" />

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLight"
            android:layout_marginTop="12dp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnOff" />

                <Button
                    android:id="@+id/btnOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnOn" />
        </TableRow>

        <TextView
            android:id="@+id/tvLevelBatteryLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLevelBattery"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/tvLevelBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLevelBattery_2" />

        <ProgressBar
            android:id="@+id/pbLevelBattery"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvStorageLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvStorage"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etNameFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNameFile" />

        <Button
            android:id="@+id/btnSaveFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveFile"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvConectionLB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvState"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnOpenCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOpenCamera"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnOpenBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnOpenBluetooth"
            android:layout_marginTop="8dp" />

</LinearLayout>
